--- a/css/fuente1.css
+++ b/css/fuente1.css
@@ -1,6 +1,6 @@
 h2 {
     color: red;
-    font-family: "cinzel",sans-serif;
+    font-family: "cinzel",sans;
 }
  /* cinzel-regular - latin */
 @font-face {
