--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 h1 {
-    font-size: 3em;
-    color: plum;
+    font-size: 5em;
+    color: rgb(17, 79, 222);
 }
 h2{
-    font-size: 2em;
-    color: mediumaquamarine;
+    font-size: 8em;
+    color: rgb(171, 255, 2);
 }
