--- a/css/fuente3.css
+++ b/css/fuente3.css
@@ -1,6 +1,6 @@
 h2{
     font-family: "waltograph",sans-serif;
-    color: rgb(red, green, rgb(25, 25, 72));
+    color:royalblue
 }
     /* waltograph */
 @font-face {
