--- a/css/fuente1.css
+++ b/css/fuente1.css
@@ -1,6 +1,20 @@
-h2 {
-    color: red;
-    font-family: "cinzel",sans-serif;
+{
+    margin: 0;
+    padding: 0;
+}
+div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    color: rgb(64, 64, 64);
+    height: 100vh;
+    width: 100%;
+}
+label{
+    font-family: 'Cinzel';
+    font-size: 6em;
+    text-align: center;
 }
  /* cinzel-regular - latin */
 @font-face {
