--- a/css/fuente2.css
+++ b/css/fuente2.css
@@ -1,6 +1,19 @@
-h2 {
-    color: rgb(207, 29, 219);
-    font-family:"bebas neue",sans-serif; 
+{
+    margin: 0;
+    padding: 0;
+}
+div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(24,24,24, .9);
+    color: rgb(249,15,15);
+    height: 100vh;
+    width: 100%;
+}
+label{
+    font-family:"bebas neue",sans-serif;
+    font-size: 12em; 
 }
 /* bebas-neue-regular - latin */
 @font-face {
