--- a/css/fuente3.css
+++ b/css/fuente3.css
@@ -1,6 +1,20 @@
-h2{
+{
+    margin: 0;
+    padding: 0;
+}
+div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(2,12,66);
+    color: rgb(255, 255, 255);
+    height: 100vh;
+    width: 100%;
+}
+label{
     font-family: "waltograph",sans-serif;
-    color:royalblue
+   font-size: 12em;
+   text-align: center;
 }
     /* waltograph */
 @font-face {
