--- a/css/fuente3.css
+++ b/css/fuente3.css
@@ -1,4 +1,4 @@
-{
+*{
     margin: 0;
     padding: 0;
 }
@@ -22,6 +22,6 @@ label{
     font-family: 'waltograph';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/waltograph42.otf'); /* IE9 Compat Modes */
-    src: url('../fonts/waltographUI.ttf')  /* IE6-IE8 */
+    src: url('../fonts/waltograph42.otf'), /* IE9 Compat Modes */
+         url('../fonts/waltographUI.ttf') format('embedded-opentype'); /* IE6-IE8 */
 }
