--- a/css/colores.css
+++ b/css/colores.css
@@ -1,6 +1,9 @@
 h1 {
     text-align: center;
 }
+h2{
+    text-align: center;
+}
 .box-direction {
     display: flex;
     flex-direction: row;
@@ -8,7 +11,41 @@ h1 {
 .box-style {
     width: 300px;
     height: 285px;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    font-size: 1.4em;
+    text-align: center;
+    font-family: tahoma,sans-serif;
+    font-weight: 900;
+}
+.box-styles {
+    width: 250px;
+    height: 250px;
     margin: 20px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    font-size: 1.1em;
+    text-align: center;
+    font-family: tahoma,sans-serif;
+    font-weight: 900;
+}
+.box-styless {
+    width: 180px;
+    height: 180px;
+    margin: 20px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    font-size: 1.1em;
+    text-align: center;
+    font-family: tahoma,sans-serif;
+    font-weight: 900;
 }
 .box-palevioletred {
     background-color:palevioletred ;
