--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,15 @@
 h1 {
     font-size: 5em;
     color: rgb(17, 79, 222);
+    text-align: center;
 }
 h2{
-    font-size: 8em;
-    color: rgb(171, 255, 2);
+    font-size: 3em;
+    text-align: center;
+    color: rgb(229, 130, 55);
 }
+h3{ font-size: 1em;
+    text-align:justify;
+    color: rgb(3, 3, 3);
+}
+
