--- a/css/catalogo.css
+++ b/css/catalogo.css
@@ -4,24 +4,33 @@
     padding: 0;
 }
 .main-box {
-    display: flex;
-    align-items:center;
-    justify-content: center;
-    flex-direction: row;  
     height: 100vh;
 }
 .box-style {
-    width: 350px;
+    width:380px;
     height: 460px;
-    margin: 50px 40px;
+    margin-top:100px;
     background-color:rgb(255, 255, 255);
-    display: flex;
-    align-items: flex-end;
+    margin: 90px auto;
+}
+.product-box{
+    width: 250px;
+    height: 300px;
+    background-color :rgb(242, 242, 242);
+    margin: 0 auto;
+    margin-top: 70px;
+}
+.img-style {   
+    width: 80%;
+    background-color :transparent;
+    margin-left: 30px;
+    margin-top: 20px;
 }
 .add-cart-1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   margin-bottom: 0px;
+   margin-top: 20px;
+    text-align: center;
+    padding-top: 25px;
     width:100%;
     height: 60px; 
     background-color:rgb(39, 200, 164);
@@ -33,38 +42,26 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: .9em;  
 }
-.add-cart-2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width:100%;
-    height: 60px; 
-    background-color:rgb(240, 184, 63);
+.product-text{
+    text-align: center;
+    background-color:white;
 }
-.add-cart-2-span{
-    background-color:transparent;
-    color: white;
+.product-text-span{
+    background-color: white;
+    font-size: 1.3em;
     font-weight: 900;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: .9em;
+    color: rgb(64, 64, 64,.9);
 }
-.add-cart-3{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width:100%;
-    height: 60px; 
-    background-color:rgb(109, 36, 244);
+.text-description{
+    background-color: white;
+    color: rgb(64,64, 64.9);
+    font-size:.8em;
 }
-.add-cart-3-span{
-    background-color:transparent;
-    color: white;
-    font-weight: 900;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: .9em;
-}
-p{
-    font-size: 1.4em;
-    text-align: justify;
-    background-color: whi;
+.price-text{
+    background-color: white;
+    color:rgb(39, 200, 164);
+    font-size: 2.1em;
+    display: block;
+    margin-top: 40px;
 }
