--- a/css/transicion.css
+++ b/css/transicion.css
@@ -5,7 +5,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color:white;
     font-size: 1.4em;
     text-align: center;
     font-family: tahoma,sans-serif;
@@ -16,7 +15,9 @@
     display: flex;
     flex-direction: row;
 }
-.box-palevioletred {
+.box-palevioletred:hover {
     background-color:palevioletred ;
     position: static;
+    height: 500px;
+    width: 500px;
 }
