--- a/css/styles.css
+++ b/css/styles.css
@@ -1,482 +1,577 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700");
+/*
+ * Theme Name: 
+ * Theme URI: 
+ * Author: Milan Savov
+ * Author URI/Mail: milan.savov@gmail.com
+ * Version: 1.0
+ * */
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+/* FONT
+================================================== */
+@font-face {
+  font-family: 'fontello';
+  src: url('../fonts/fontello.eot?37927580');
+  src: url('../fonts/fontello.eot?37927580#iefix') format('embedded-opentype'),
+       url('../fonts/fontello.woff2?37927580') format('woff2'),
+       url('../fonts/fontello.woff?37927580') format('woff'),
+       url('../fonts/fontello.ttf?37927580') format('truetype'),
+       url('../fonts/fontello.svg?37927580#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
-:root{
-  --white: #ffffff;
-  --grey: #414141;
-  --red: 	#d62d20;
-  --amarillo: #ffa700;
-  --blue:#3367d6;
-  --orange:#e34c26;
-  --green:#008744;
-  --blueReact: #61DBFB;
+ 
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1em;
+  margin-left: .2em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
+ 
+.icon-twitter:before { content: '\f099'; } /* '' */
+.icon-facebook:before { content: '\f09a'; } /* '' */
+.icon-gplus:before { content: '\f0d5'; } /* '' */
+.icon-linkedin:before { content: '\f0e1'; } /* '' */
+.icon-linkedin:before { content: '\f0e1'; } /* '' */
+.icon-up:before { content: '\f176'; } /* '' */
 
+/* CUSTOM RESETS
+================================================== */
 a {
-  text-decoration: none;
-  color: var(--white);
+    transition: color 0.25s ease-in-out;
+    -moz-transition: color 0.25s ease-in-out;
+    -webkit-transition: color 0.25s ease-in-out;
+    -o-transition: color 0.25s ease-in-out;
+    -ms-transition: color 0.25s ease-in-out;
 }
 
+a:focus,
 a:hover {
-  color: #bbbbbb;
+    outline: 0 none;
+    text-decoration: none;
 }
 
-html {
-  scroll-behavior: smooth;
+h4 {
+    font-size: 30px;
 }
 
-body {
-  font-family: "Roboto", sans-serif;
-  background:var(--white);
-  color: #f5f5f5;
+/* Buttons */ 
+.btn {
+    min-width: 145px;
+    line-height: 50px;
+    padding: 0 30px;
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-radius: 0;
+    transition: box-shadow 0.25s ease-in-out;
+    -moz-transition: box-shadow 0.25s ease-in-out;
+    -webkit-transition: box-shadow 0.25s ease-in-out;
+    -o-transition: box-shadow 0.25s ease-in-out;
+    -ms-transition: box-shadow 0.25s ease-in-out;
 }
 
-section {
-  padding: 90px 0;
-  text-align: center;
-  background: white;
+.btn-fill {
+    color: #fff;
+    background-color: #212121;
 }
 
-.container {
-  width: 100%;
-  display: inherit;
-  max-width: 1200px;
-  justify-content: inherit;
-  margin: 0 auto;
-  padding: 0 20px;
+.btn-border {
+    background-color: transparent;
+    color: #212121;
+    border: 1px solid #212121; 
 }
 
-.navbar {
-  position: fixed;
-  background: transparent;
-  transition: background 0.3s;
-  display: flex;
-  justify-content: space-between;
-  height: 60px;
-  width: 100%;
-  z-index: 5;
+.btn-fill:hover,
+.btn-fill:focus {
+    color: #fff;
 }
 
-.navbar__logo {
-  display: flex;
-  align-items: center;
+.btn:hover,
+.btn:focus {
+    box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.15);
 }
 
-.navbar__title {
-  font-size: 24px;
-}
-
-.navbar__title::before {
-  content: "<";
-  color:var(--blue);
-}
+/* Input fields */
+.form-control {
+    padding-left: 10px;
+    border: 0;
+    border-bottom: 1px solid #212121;
+    border-radius: 0;
+    background-color: transparent; 
+    box-shadow: none;
+    outline: 0 none transparent;
+    -webkit-appearance:none;
+ }
 
-.navbar__title::after {
-  content: "/>";
-  color: var(--blue);
+textarea {
+    margin-top: 40px;
+    min-height: 200px;
+    resize: none;
 }
 
-.navbar__links {
-  list-style: none;
-  display: flex;
-  height: 100%;
-  align-items: center;
+.form-control:focus {
+    box-shadow: none;
+    border-bottom-color: #e1e1e1;
 }
 
-.navbar__link {
-  padding-left: 20px;
+::-moz-placeholder,
+::-webkit-input-placeholder {
+    font-size: 16px;
 }
 
-.navbar__link a {
-  color: #8e8e8e;
-  transition: color 0.3s;
+/* LAYOUT
+================================================== */
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    color: #212121;
 }
 
-.navbar__link a:hover {
-  color: var(--blue);
-  transition: color 0.3s;
+.img-res {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
-.navbar__menu {
-  display: none;
-  align-items: center;
-  font-size: 35px;
+.visible-xxs {
+    display: none;
 }
 
-.home {
-  min-height: 100vh;
-  display: flex;
-  padding: 30px;
-  justify-content: center;
-  align-items: center;
-  background: rgba(0, 0, 0, 0.8);
-  position: relative;
+/* Background-color */
+.gray-bg {
+    background-color: #e1e1e1;
 }
 
-.home__background {
-  background-color: #8e8e8e;
-  background-image: url(./assets/bg.webp);
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  z-index: -1;
+/* HEADER
+================================================== */
+.site-header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: transparent;
+    z-index: 5;
 }
 
-.home__profile {
-  height: 250px;
-  border-radius: 50%;
-  margin-right: 40px;
-  transition: filter  3s;
+.site-logo img {
+    padding-bottom: 2px;
 }
 
-.home__title {
-  font-size: 60px;
-  text-shadow: 1px 1px black;
-  color: var(--blue);
+/* Navigation */
+.navbar-nav > li > a {
+    padding: 5px 0;
+    font-weight: 600;
+    color: #212121;
+    text-transform: uppercase;
+    border-bottom: 2px solid transparent;
+    transition: border-color 0.25s ease-in-out;
+    -moz-transition: border-color 0.25s ease-in-out;
+    -webkit-transition: border-color 0.25s ease-in-out;
+    -o-transition: border-color 0.25s ease-in-out;
+    -ms-transition: border-color 0.25s ease-in-out;
 }
 
-.home__title--primary,
-.home__title--secondary {
-  font-size: 45px;
-  color: #f5f5f5;
-  text-shadow: 1px 1px black;
+.navbar-nav.navbar-right {
+    margin-right: 0;
 }
 
-
-.section__title {
-  color: var(--grey);
-  font-size: 35px;
-  margin-bottom: 30px;
-  display: flex;
+.navbar-nav > li + li > a {
+    margin-left: 40px;
 }
 
-.section__subtitle {
-  color: var(--grey);
-  text-align: start;
-  margin-bottom: 20px;
+.navbar-nav > li > a:hover,
+.navbar-nav > li.active > a,
+.nav > li > a:hover,
+.nav > li.active > a {
+    background-color: transparent;
+    border-bottom: 2px solid #212121;
 }
 
-.about__grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
+.nav > li > a:focus {
+    background-color: transparent;
 }
 
-.about__description {
-  text-align: left;
-  color: var(--grey);
-  padding-right: 80px;
-  line-height: 40px;
+/* HERO
+================================================== */
+.hero { 
+    background: url(../img/hero.jpg) no-repeat center / cover; 
+    height: 100%;
+    width: 100%;
+    min-height: 700px;
 }
 
-.about__summary {
-  margin: 30px 0;
+.hero .container {
+    position: relative;
+    height: 100%;
 }
 
-.about__description span {
-  color: var(--grey);
+.hero .col-md-6:first-child {
+    position: absolute;
+    top: 35%;
+    left: 0;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    z-index: 2;
 }
 
-.about__description h2 {
-  color: var(--grey);
-  margin: 20px 0;
+.hero .col-md-6:last-child {
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
 
-.about__skills {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 10px;
+.hero h1 {
+    font-size: 46px;
+    font-weight: 700;
+    margin: 0 0 15px;
+    text-transform: uppercase;
 }
 
-.skill__title {
-  color: var(--grey);
-  grid-column: span 3;
-  text-align: left;
-  margin: 20px 0;
-}
+.job-title {
+    font-size: 22px;
+    margin-bottom: 30px;
+    line-height: 1;
+} 
 
-.skill__item {
-  font-size: 65px;
-  color: var(--grey);
-  padding: 35px;
-  transition: all 0.3s;
-  min-width: 130px;
-  height: 180px;
+.hero img {
+    height: 600px;
 }
 
-.skill__item img {
-  max-height: 100px;
-  max-width: 100px;
+/* SITEMAIN
+================================================== */
+.site-main {
+    position: relative;
+    margin-bottom: 100px;
+    background-color: #fff;
+    z-index: 1;
 }
-.fa-node{
-  color: #3C873A;
+/* site-section */
+.site-section {
+   padding-top: 120px;
 }
 
-.fa-html5{
-  color: #e34c26;
+.site-section h2,
+.site-section h3 {
+    font-size: 36px;
+    margin: 0;
+    text-transform: uppercase;
 }
 
-.fa-css3-alt{
-  color: #264de4;
+.img-lines {
+    margin: 15px 0 40px;
 }
 
-.fa-js{
-  color:#f0db4f ;
+.site-section p {
+    margin-bottom: 35px;
 }
 
-.fa-git-alt{
-  color: #f34f29;
+/* Section: Skills */
+.section-skills {
+    padding-bottom: 120px;
 }
 
-.fa-react{
-  color: var(--blueReact);
+.skill + .skill {
+    margin-top: 50px;
 }
 
-
-.skill__name {
-  font-size: 16px;
-  text-align: center;
+.skill h4 {
+    font-size: 24px;
+    text-transform: uppercase;
+    margin: 0 0 15px;
 }
 
-.services__grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
+.progress {
+    height: 15px;
+    margin-bottom: 0;
+    border-radius: 0;
+    background-color: #dfdfdf;
+    box-shadow: none;
 }
 
-.services__item {
-  padding: 20px;
-  /* background: rgba(245,245,245,0.6); */
-  border-bottom: 5px solid transparent;
-  border-radius: 10px;
-  transition: border 0.3s;
+.progress-bar {
+    background-color: #212121;  
 }
-
-/* .services__item:hover {
-  transition: border 0.3s;
-  border-bottom: 5px solid var(--blue);
-} */
 
-.services__item:hover i {
-  transition: all 0.3s;
-  color: var(--grey);
+/* Section: Services */
+.section-services {
+    position: relative;
+    padding-top: 220px;
 }
 
-.services__item i {
-  transition: all 0.3s;
-  font-size: 40px;
-  margin: 20px 0;
+.section-services:before {
+    content: '';
+    background: url(../img/services-bg.jpg) no-repeat fixed center / cover;
+    width: 100%;
+    height: 400px; 
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
-.fa-mobile-alt{
-  color: black;
+.overlay:after {
+    content: '';
+    width: 100%;
+    height: 400px; 
+    position: absolute;
+    background-color: rgba(255,255,255,0.5);
+    top: 0;
+    left: 0;
+    z-index: 0;
 }
 
-.fa-pencil-ruler{
-  color: var(--orange);
+.section-services .container {
+    padding: 120px 100px;
+    position: relative;
+    background-color: #fff;
+    box-shadow: 0px 0px 40px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
-.fa-code{
-  color: var(--green);
+.service h4 {
+    margin: 25px 0;
+    font-size: 24px;
+    font-weight: 700;
 }
 
-.fa-thumbs-up{
-  color: var(--red);
+.service p {
+    color: #000;
+    margin-bottom: 0;
 }
 
-.fa-tachometer-alt{
-  color: var(--amarillo);
+/* Section: Portfolio */
+.section-portfolio {
+    padding-bottom: 120px;
 }
 
-.fa-crosshairs{
-  color: var(--blue);
+.portfolio-item {
+    height: 280px;
+    margin-bottom: 30px;
+    position: relative;
 }
 
-.services__item h3 {
-  color: var(--grey);
-  margin-bottom: 15px;
+.section-portfolio .col-md-4:nth-last-child(-n+3) .portfolio-item {
+    margin-bottom: 0;
 }
 
-.services__item p {
-  color: var(--grey);
+.portfolio-item:before {
+    content: '';
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transition: background-color 0.25s ease-in-out;
+    -moz-transition: background-color 0.25s ease-in-out;
+    -webkit-transition: background-color 0.25s ease-in-out;
+    -o-transition: background-color 0.25s ease-in-out;
+    -ms-transition: background-color 0.25s ease-in-out;
 }
 
-.portfolio__grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
+.portfolio-item:hover:before{
+    background-color: rgba(33,33,33,0.6);
 }
 
-.portfolio__item {
-  background: white;
-  position: relative;
-  object-fit: cover;
-  overflow: hidden;
-  font-size: 14px;
-  border-radius: 10px;
+.portfolio-item-info {
+    position: absolute;
+    top: 150px;
+    left: 0px;
+    z-index: 999;
+    opacity: 0;
+    transition: opacity 0.25s ease-in-out, left 0.25s ease-in-out;
+    -moz-transition: opacity 0.25s ease-in-out, left 0.25s ease-in-out;
+    -webkit-transition: opacity 0.25s ease-in-out, left 0.25s ease-in-out;
+    -o-transition: opacity 0.25s ease-in-out, left 0.25s ease-in-out;
+    -ms-transition: opacity 0.25s ease-in-out, left 0.25s ease-in-out;
 }
 
-.portfolio__img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
-  transition: all 1s;
-  border-radius: 10px;
-  max-height: 190px;
+.portfolio-item:hover .portfolio-item-info {
+    left: 50px;
+    opacity: 1;
 }
 
-.portfolio__description {
-  padding: 50px;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.7);
-  top: 300px;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: all 0.5s;
-  border-radius: 10px;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+.portfolio-item-info h4 {
+    margin: 0 0 20px;
+    font-weight: 700;
+    color: #fff;
 }
 
-.portfolio__item:hover .portfolio__description {
-  visibility: visible;
-  opacity: 1;
-  transition: all 0.5s;
-  border-radius: 10px;
-  transform: translateY(-300px);
+.portfolio-item-info a {
+    padding: 6px 7px 4px;
+    font-size: 12px;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    color: #fff;
+    transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
+    -moz-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
+    -webkit-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
+    -o-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
+    -ms-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
 }
 
-.portfolio__item:hover .portfolio__img {
-  transition: all 1s;
-  border-radius: 10px;
-  transform: scale(1.3);
+.portfolio-item-info a:hover {
+    color: #212121;
+    background-color: #fff;
 }
 
-.portfolio__description--title {
-  color: var(--white);
+.section-portfolio .btn {
+    margin-top: 10px;
 }
 
-.portfolio__description--text {
-  margin: 20px 0;
+/* Modal */
+.modal {
+    z-index: 9999;
 }
 
-.buttons__container {
-  display: flex;
-  border-radius: 10px;
+.modal-content {
+    border-radius: 0;
+    box-shadow: 0px 0px 40px 8px rgba(0, 0, 0, 0.2);
 }
 
-.button {
-  background: #191919;
-  color: #f5f5f5;
-  padding: 5px 10px;
-  display: inline-block;
-  margin: auto;
+.modal-header {
+    position: relative;
+    padding: 0;
+    height: 500px;
 }
 
-.button:hover {
-  color: var(--blue);
+.modal-header .close {
+    position: absolute;
+    right: 0;
+    padding: 10px 11px;
+    margin-top: 0;
+    background-color: #fff;
+    font-size: 16px;
+    color: #212121;
+    border-left: 1px solid #212121;
+    border-bottom: 1px solid #212121;
+    opacity: 1;
+    transition: box-shadow 0.25s ease-in-out;
+    -moz-transition: box-shadow 0.25s ease-in-out;
+    -webkit-transition: box-shadow 0.25s ease-in-out;
+    -o-transition: box-shadow 0.25s ease-in-out;
+    -ms-transition: box-shadow 0.25s ease-in-out;
 }
 
-.button--cta {
-
-  background: var(--blue);
-  color: var(--white);
-  padding: 5px 30px;
-  display: inline-block;
-  align-self: center;
-  margin: 20px auto;
-  font: bold;
-  border-radius: 5px;
+.modal-header .close:hover {
+    box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
 }
 
-.button--cta i {
-  margin-right: 10px;
+.modal-body h4 {
+    font-weight: 700;
 }
 
-.button--cta:hover {
-  background: var(--grey);
-  color: white;
+.modal-footer {
+    text-align: center;
 }
-.button .fa-github:before {
-  color: white;
-}
 
-.contact__grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 30px;
+/* Section: Counters */
+.section-counters {
+    background: url(../img/counters-bg.jpg) no-repeat fixed center / cover;
+    width: 100%;
+    padding: 100px 0;
+    position: relative;
 }
 
-.contact__item {
-  color: var(--grey);
-  padding: 40px;
-  transition: all 0.3s;
+.section-counters:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
 }
 
-.fa-envelope{
-  color: var(--red);
+.section-counters h4 {
+    color: #fff;
+    margin: 25px 0 0;
 }
 
-.fa-github{
-  color: black;
+.site-section p.counter {
+    font-size: 100px;
+    font-weight: 300;
+    color: #fff;
+    margin: 0;
+    line-height: 0.8;
 }
 
-.fa-twitter{
-  color: #00acee;
+/* Section: Form*/
+.section-form {
+    padding-bottom: 120px;
 }
 
-.fa-linkedin-in{
-  color:#0e76a8  ;
+.section-form .btn {
+    margin-top: 40px;
 }
 
-.contact__item i {
-  font-size: 50px;
-  margin-bottom: 10px;
+/* FOOTER
+================================================== */
+.site-footer {
+    position: fixed;
+    bottom: 0;
+    padding: 30px 0;
+    width: 100%;
+    background-color: #212121;
+    z-index: -1;
 }
 
-.fa-envelope:hover {
-  transition: all 0.3s;
-  color: var(--grey);
-}
-.fa-github:hover {
-  transition: all 0.3s;
-  color: var(--grey);
+.icon {
+    line-height: 40px;
+    padding: 9px 11px;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50%;
 }
-.fa-twitter:hover {
-  transition: all 0.3s;
-  color: var(--grey);
-}
-.fa-linkedin-in:hover {
-  transition: all 0.3s;
-  color: var(--grey);
+
+.icon + .icon {
+    margin-left: 5px;
 }
-.active a {
-  color: #f5f5f5;
+
+.icon i:before {
+    margin:0;
 }
 
-.footer {
-  color: var(--grey);
-  background-color: rgba(245,245,245,0.6);
-  padding: 30px;
-  text-align: center;
-  font-size: 14px;
+.icon:hover {
+    background-color: #fff;
 }
 
-.footer a {
-  color: var(--grey);
+.site-footer a {
+    transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
+    -moz-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
+    -webkit-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
+    -o-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
+    -ms-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
 }
+
+a.twitter-bg:hover {color: #55acee;}
+a.facebook-bg:hover{color: #3b5998;}
+a.gplus-bg:hover{color: #007bb5;} 
+a.linkedin-bg:hover {color: #dd4b39;}
+a.icon-up-bg:hover {color: #212121;}
 
-.footer a:hover {
-  color: var(--blue);
+.copyright {
+    margin-bottom: 0;
+    line-height: 40px;
+    color: #fff;
+    text-align: center;
 }
