--- a/css/starbukcs.css
+++ b/css/starbukcs.css
@@ -4,8 +4,13 @@
     font-family: Poppins,sans-serif;
 }
 header{
+position: fixed;
+background-color: white;
+z-index: 15;
+top: 0;
+width: 100%;
     display: grid;
-    grid-template:"empty-left main-logo box-main-menu empty-rigth"110px /
+    grid-template:"empty-left main-logo box-main-menu empty-rigth"140px /
                       140px      1fr        2fr             50px ;
 }
 
@@ -25,7 +30,6 @@ grid-area:main-logo;
     justify-content: flex-end;
     align-items: center;
     list-style: none;
-    padding-right: 150px;
 }
 .main-menu> li > a {
     color: rgb(64, 64, 64,.9);
@@ -37,14 +41,23 @@ grid-area:main-logo;
     font-family: Poppins,sans-serif;
 }
 .main-circle{
-    background-color:rgb(2, 104, 64); 
     width: 1800px;
     height: 1800px;
     border-radius: 900px;
     position: fixed;
     top: 280px;
     right:-950px ;
+    z-index: 5;
     
+}
+.main-circle-green{
+    background-color:rgb(2, 104, 64); 
+}
+.main-circle-ligth-pink{
+    background-color: rgb(230, 112,147);
+}
+.main-circle-dark-pink{
+    background-color: rgb(194, 73, 159);
 }
 h1{
     font-size: 5em;
@@ -55,6 +68,7 @@ h1{
     color: rgb(2, 104, 64);
     font-family: Poppins,sans-serif;
     font-weight:900;
+    font-size: 1.3em      ;
 }
 .main-content{
     margin-top: 140px;
@@ -103,52 +117,38 @@ h1{
     margin-top: -100px;
     justify-content: center;
     align-items: flex-start;
+    position: fixed;
+    top: 350px;
+    right: 0;
 }
 footer{
-   position: fixed;
    bottom: 20px;
    display: flex;
    justify-content: center;
    width:100% ; 
    gap: 40px;
    z-index:10 ;
+   color: white;
 }
 .style-img-mini{
-z-index: 20;
+ z-index: 20;
+ position: relative;
+ transition: all 600ms;
+ top: 0;
+
+}
+.style-img-mini:hover{
+    cursor: pointer;
+}
+.mini-green:hover{
+    top: -30px;
+}
+.mini-ligth-pink:hover{
+    top: -30px;
+}
+.mini-dark-pink:hover{
+    top: -30px;
 }
 
 
-
-/*FONTS
-/* poppins-regular - latin */
-@font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../fonts/poppins-v20-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
-  /* poppins-500 - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    src: url('../fonts/poppins-v20-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
-  /* poppins-900 - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 900;
-    src: url('../fonts/poppins-v20-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
-  /* poppins-900 - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 900;
-    src: url('../fonts/poppins-v20-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
+ 
