--- a/css/sneakers1.css
+++ b/css/sneakers1.css
@@ -183,9 +183,7 @@ header {
 .thumb:hover {
     opacity: 0.5;
 }
-.box-thumb {
-/*     margin: 15px; */
-}
+
 .box-thumb:hover{
     position: relative;
     background-color: rgb(255,255,255);
@@ -206,9 +204,66 @@ header {
 .texto-producto{
     margin-top: 40px;
     color: rgb(120,120,120);
-    line-height: 1.5em;
+    line-height: 1em;
     font-weight: 500;
 }
+.box-precio{
+    display: flex;
+    flex-direction: row;
+
+}
+.precio{
+    margin-top: 25px;
+    font-weight: 900;
+    font-size: 1.9em;  
+}
+.descuento{
+    display: flex;
+    align-items: flex-end;
+    font-weight: 600;
+}
+.lbl-descuento{
+    background-color: rgb( 255,237,224);
+    padding: 5px 8px;
+    border-radius: 4px;
+    margin-left: 5px;
+    margin-bottom: 8px;
+    color: rgb( 255,125,26);
+}
+.box-precio-sin-desc{
+    color: rgb(140,140,140,.8);
+    font-weight: 700;
+    margin-top: 10px;
+    font-size: 1.1em;
+    text-decoration: line-through;
+}
+.box-minus-plus{
+    width: 150px;
+    display: flex;
+    flex-direction:row;
+    margin-top: 15px;
+    background-color: rgb( 247,248,253);
+    border-radius: 10px;
+}
+.box-minus, .box-cantidad, .box-plus{
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    font-weight: 700;  
+}
+.box-minus, .box-plus{
+    color: rgb( 255,125,26);
+    cursor: pointer;
+}
+.valor-total {
+    margin-top: 25px;
+    font-weight: 700;
+    font-size: 2em;
+}
+
 /* Fonts */
 /* kanit-regular - latin */
 @font-face {
